add blockquote and helper classes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   </head>
   <body>
     <div class="container">
+
       <div class="jumbotron">
         <h1>The Dream</h1>
         <p>We have hot-tubs</p>
       </div>
+
       <div id="index-background"></div>
+
       <div class="panel panel-info">
         <div class="panel-heading">
           <p class="panel-title">Join us in:</p>
@@ -24,7 +27,13 @@
             <li>Considering the water</li>
           </ul>
         </div>
-      </div>  
+      </div>
+
+      <blockquote>
+        <p class="bg-warning">"It's lit."</p>
+        <footer class="bg-success">Native Norwegian</footer>
+      </blockquote>
+
     </div>
   </body>
 </html>
