add more helper classes, edit slogan

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <div class="jumbotron">
         <h1>The Dream</h1>
-        <p>We have hot-tubs</p>
+        <p>Come to Norway: we have hot-tubs.</p>
       </div>
 
       <div id="index-background"></div>
@@ -21,10 +21,10 @@
         </div>
         <div class="panel-body">
           <ul>
-            <li>Swimming</li>
-            <li>Boating</li>
-            <li>Considering the sky</li>
-            <li>Considering the water</li>
+            <li class="bg-info">Swimming</li>
+            <li class="bg-info">Boating</li>
+            <li class="bg-info">Considering the sky</li>
+            <li class="bg-info">Considering the water</li>
           </ul>
         </div>
       </div>
