add vacation packages using bootstrap grid system

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Scandalous Scandinavia</title>
   </head>
@@ -10,24 +11,58 @@
 
       <div class="jumbotron">
         <h1>The Dream</h1>
-        <p>Come to Norway: we have hot-tubs.</p>
+        <p>Come to Norway. We have hot-tubs.</p>
       </div>
 
       <div id="index-background"></div>
 
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <p class="panel-title">Join us in:</p>
-        </div>
-        <div class="panel-body">
+
+      <div class="row">
+        <div class="col-sm-5">
+          <h3 class="bg-info">Summer Fun</h3>
           <ul>
-            <li class="bg-info">Swimming</li>
-            <li class="bg-info">Boating</li>
-            <li class="bg-info">Considering the sky</li>
-            <li class="bg-info">Considering the water</li>
+            <li>$5000 all inclusive</li>
+            <li>May - Sept 2017</li>
+            <li>Multiple Rooms Available</li>
+            <li>Swimming, Hiking, Kayaking, the world is your oyster!</li>
+          </ul>
+        </div>
+
+        <div class="col-sm-5">
+          <h3 class="bg-info">Summer Relax</h3>
+          <ul>
+            <li>$8000 all inclusive</li>
+            <li>May - Sept 2017</li>
+            <li>Select and Luxury Rooms Available</li>
+            <li>Spa package (<em>hot-tubs</em>), private dining, custom guided tours.</li>
           </ul>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-sm-5">
+          <!-- <div class="well"> -->
+            <h3 class="bg-info">Winter Fun</h3>
+            <ul>
+              <li>$7500 all inclusive - Winter discount, includes rentals.</li>
+              <li>November - March 2017/2018</li>
+              <li>Multiple Rooms Available</li>
+              <li>Snow shoeing, ice climbing, whale watching, snow-mobiling and more!</li>
+            </ul>
+          <!-- </div>   -->
+        </div>
+
+        <div class="col-sm-5">
+          <h3 class="bg-info">Winter Relax</h3>
+          <ul>
+            <li>$8000</li>
+            <li>November - March 2017/2018</li>
+            <li>Select and Luxury Rooms Available</li>
+            <li>Spa package (<em>hot-tubs</em>), private dining, custom guided tours.</li>
+          </ul>
+        </div>
+      </div>
+
 
       <blockquote>
         <p class="bg-warning">"It's lit."</p>
