switch to wells for columns, edit borders and text, update img file path for background

--- a/index.html
+++ b/index.html
@@ -14,52 +14,59 @@
         <p>Come to Norway. We have hot-tubs.</p>
       </div>
 
-      <div id="index-background"></div>
+      <div id="index-background"></div> <!--empty div, built in css-->
 
 
       <div class="row">
-        <div class="col-sm-5">
-          <h3 class="bg-info">Summer Fun</h3>
-          <ul>
-            <li>$5000 all inclusive</li>
-            <li>May - Sept 2017</li>
-            <li>Multiple Rooms Available</li>
-            <li>Swimming, Hiking, Kayaking, the world is your oyster!</li>
-          </ul>
+        <div class="col-sm-6">
+          <div class="well">
+            <h3 class="bg-info">Summer Fun</h3>
+            <ul>
+              <li>$5000 all inclusive</li>
+              <li>May - Sept 2017</li>
+              <li>Multiple Rooms Available</li>
+              <li>Swimming, Hiking, Kayaking, the world is your oyster!</li>
+            </ul>
+          </div>
+
         </div>
 
-        <div class="col-sm-5">
-          <h3 class="bg-info">Summer Relax</h3>
-          <ul>
-            <li>$8000 all inclusive</li>
-            <li>May - Sept 2017</li>
-            <li>Select and Luxury Rooms Available</li>
-            <li>Spa package (<em>hot-tubs</em>), private dining, custom guided tours.</li>
-          </ul>
+        <div class="col-sm-6">
+          <div class="well">
+            <h3 class="bg-info">Summer Relax</h3>
+            <ul>
+              <li>$8000 all inclusive</li>
+              <li>May - Sept 2017</li>
+              <li>Select and Luxury Rooms Available</li>
+              <li>Spa package (<em>hot-tubs</em>), private dining, guided tours.</li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-sm-5">
-          <!-- <div class="well"> -->
+        <div class="col-sm-6">
+          <div class="well">
             <h3 class="bg-info">Winter Fun</h3>
             <ul>
               <li>$7500 all inclusive - Winter discount, includes rentals.</li>
               <li>November - March 2017/2018</li>
               <li>Multiple Rooms Available</li>
-              <li>Snow shoeing, ice climbing, whale watching, snow-mobiling and more!</li>
+              <li>Snow shoeing, ice climbing, snow-mobiling and more!</li>
             </ul>
-          <!-- </div>   -->
+          </div>  <!--closing div for well-->
         </div>
 
-        <div class="col-sm-5">
-          <h3 class="bg-info">Winter Relax</h3>
-          <ul>
-            <li>$8000</li>
-            <li>November - March 2017/2018</li>
-            <li>Select and Luxury Rooms Available</li>
-            <li>Spa package (<em>hot-tubs</em>), private dining, custom guided tours.</li>
-          </ul>
+        <div class="col-sm-6">
+          <div class="well">
+            <h3 class="bg-info">Winter Relax</h3>
+            <ul>
+              <li>$8000</li>
+              <li>November - March 2017/2018</li>
+              <li>Select and Luxury Rooms Available</li>
+              <li>Spa package (<em>hot-tubs</em>), private dining, guided tours.</li>
+            </ul>
+          </div>
         </div>
       </div>
 
